@@ -17,6 +17,10 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
+server/disease.c: fix bug #1706986: Rabies can infect a DM. DMs are now immune
+ and non contagious.
+Nicolas Weeger 2007-04-28
+
 socket/loop.c: fix unitialized variable.
 Nicolas Weeger 2007-04-28
 
